# LaunchKit

./: .gitignore  CONTRIBUTING.md  LICENSE  launchkit.yaml.example  pyproject.toml  readme.md
.github/ISSUE_TEMPLATE/: real-world-validation.yml
.github/workflows/: publish.yml
docs/: adding-a-language.md  config-reference.md  demo.md  generators.md  real-world-validation.md  release.md
examples/mixed-stack/: launchkit.yaml
examples/mixed-stack/services/api/: requirements.txt
examples/mixed-stack/services/processor/: go.mod
examples/monorepo-node/: launchkit.yaml
examples/monorepo-node/services/api/: package.json
examples/monorepo-python/: launchkit.yaml
scripts/: record_mixed_stack_demo.sh  validate_external_repo.sh
src/launchkit/: __init__.py  cli.py
src/launchkit/core/: config.py  diff.py  doctor.py  eject.py  engine.py  linter.py  measure.py  tooling.py  upgrade.py  verify.py
src/launchkit/detectors/: base.py  entrypoint.py  environment.py  go.py  node.py  python.py  resources.py
src/launchkit/generators/: compose.py  nginx.py
src/launchkit/utils/: fs.py  printer.py  templates.py
tests/: conftest.py
tests/fixtures/go-gin/: go.mod
tests/fixtures/node-nextjs/: package.json
tests/integration/: test_generate.py  test_phase0_correctness.py  test_verify_docker.py
tests/unit/: test_ci_generators.py  test_cli.py  test_compose.py  test_config.py  test_detectors.py  test_diff.py  test_docker_generators.py  test_doctor.py  test_eject.py  test_entrypoint.py  test_environment.py  test_environments.py  test_fs.py  test_k8s_generators.py  test_linter.py  test_measure.py  test_new_languages.py  test_nginx.py  test_printer.py  test_resources.py  test_secrets.py  test_template_override.py  test_verify.py
(+33 files in other folders)
